--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,7 +59,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/house_image1.jpg
+    - assets/house_image2.jpg
+    - assets/house_image3.jpg
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
