--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2' // 적절한 Gradle 플러그인 버전 설정
+    }
+}
+
 allprojects {
     repositories {
         google()
